--- a/app/src/main/res/layout/fragment_signup_info.xml
+++ b/app/src/main/res/layout/fragment_signup_info.xml
@@ -179,6 +179,7 @@
               android:id="@+id/btn_info_shopping"
               android:text="쇼핑"
               android:textSize="16sp"
+              android:layout_marginRight="16dp"
               android:layout_weight="1"
               android:textColor="@color/colorTextGray"
               android:layout_width="match_parent"
