--- a/app/src/main/res/layout/activity_point.xml
+++ b/app/src/main/res/layout/activity_point.xml
@@ -21,85 +21,142 @@
       android:background="@null"
       android:src="@drawable/back"
       android:id="@+id/ibtn_back_point"/>
+
+    <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="regular"
+      android:text="적립금"
+      android:textColor="#333333"
+      android:textSize="20sp"
+      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/tv_setting_title"/>
   </FrameLayout>
 
-  <LinearLayout
+  <FrameLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="130dp">
+    android:layout_height="109dp">
+
+    <ImageView
+      android:id="@+id/iv_point_background"
+      android:src="@drawable/silver_bg"
+      android:scaleType="fitXY"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
 
     <LinearLayout
-      android:id="@+id/ll_point_info"
       android:orientation="vertical"
-      android:gravity="center"
-      android:layout_marginTop="35dp"
+      android:layout_marginTop="6dp"
+      android:layout_marginLeft="16dp"
+      android:layout_marginRight="16dp"
+      android:layout_marginBottom="3dp"
       android:layout_width="match_parent"
-      android:layout_height="40dp"
-      android:weightSum="1">
+      android:layout_height="match_parent">
 
-      <RelativeLayout
-        android:id="@+id/rl_point"
-        android:gravity="center"
+      <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="wrap_content">
 
-        <ImageView
-          android:layout_width="40dp"
-          android:layout_height="40dp"
-          android:src="@mipmap/level"
-          android:id="@+id/iv_rankImage"/>
-
-        <TextView
-          android:gravity="center"
-          android:textSize="32sp"
-          android:textColor="@color/colorBlack"
-          android:text="100,000"
-          android:layout_marginRight="10dp"
-          android:layout_marginLeft="10dp"
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
+          android:id="@+id/tv_point_user_name"
+          android:text="Puzi"
+          android:textSize="15sp"
+          android:textColor="@color/colorWhite"
           android:layout_width="wrap_content"
-          android:layout_height="38dp"
-          android:id="@+id/tv_point"
-          android:layout_alignParentTop="true"
-          android:layout_toRightOf="@+id/iv_rankImage"/>
+          android:layout_height="wrap_content"/>
 
-      </RelativeLayout>
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
+          android:text="님은"
+          android:textSize="15sp"
+          android:textColor="@color/colorWhite"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
 
-    </LinearLayout>
+      </LinearLayout>
 
-    <LinearLayout
-      android:id="@+id/ll_point_today"
-      android:layout_width="match_parent"
-      android:layout_height="24dp"
-      android:layout_marginTop="2dp"
-      android:orientation="horizontal"
-      android:gravity="center">
+      <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-      <ImageView
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="center_vertical"
-        android:background="@drawable/rectangle_2"
-        android:layout_width="13.3dp"
-        android:layout_height="13.3dp"
-        android:id="@+id/iv_todaypoint"
-        android:layout_alignBottom="@+id/fl_point"
-        android:layout_toRightOf="@+id/fl_point"
-        android:layout_toEndOf="@+id/fl_point"/>
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="bold"
+          android:id="@+id/tv_point_user_level"
+          android:text="VVIP"
+          android:textSize="20sp"
+          android:textColor="@color/colorWhite"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
 
-      <View
-        android:layout_width="5dp"
-        android:layout_height="0dp"/>
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
+          android:text="등급 입니다."
+          android:textSize="15sp"
+          android:textColor="@color/colorWhite"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
 
-      <TextView
-        android:text="1000"
-        android:id="@+id/tv_point_today"
+      </LinearLayout>
+
+      <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorTextGray"/>
+        android:layout_height="match_parent">
+
+        <LinearLayout
+          android:orientation="horizontal"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent">
+
+          <com.puzi.puzi.ui.customview.RobotoTextView
+            android:gravity="center_vertical"
+            android:layout_marginRight="2.6dp"
+            android:layout_gravity="center_vertical"
+            android:textSize="32sp"
+            android:textColor="@color/colorWhite"
+            android:text="0P"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_point"/>
+
+          <ImageView
+            android:layout_marginLeft="2.8dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="2.6dp"
+            android:src="@drawable/rectangle_1"
+            android:layout_width="13.3dp"
+            android:layout_height="match_parent"
+            android:paddingTop="15.85dp"
+            android:paddingBottom="15.85dp"
+            android:id="@+id/iv_todaypoint"/>
+
+          <com.puzi.puzi.ui.customview.RobotoTextView
+            android:layout_marginLeft="2.2dp"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/tv_point_today"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0P"
+            android:textSize="18sp"
+            android:textColor="@color/colorWhite"/>
+
+        </LinearLayout>
+
+        <Button
+          android:id="@+id/btn_pointhistory"
+          android:background="#00000000"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"/>
+
+      </FrameLayout>
 
     </LinearLayout>
 
-  </LinearLayout>
+  </FrameLayout>
 
   <LinearLayout
     android:background="#DADADA"
@@ -121,10 +178,11 @@
       android:layout_weight="1"
       android:orientation="vertical">
 
-      <TextView
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="regular"
         android:text="적립금"
         android:textColor="@color/colorPuzi"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:gravity="center"
         android:paddingBottom="4dp"
         android:layout_width="match_parent"
@@ -151,10 +209,11 @@
       android:layout_weight="1"
       android:orientation="vertical">
 
-      <TextView
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="regular"
         android:text="등급"
         android:textColor="#6D6D6D"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:gravity="center"
         android:paddingBottom="4dp"
         android:layout_width="match_parent"
