--- a/app/src/main/res/layout/activity_recommend.xml
+++ b/app/src/main/res/layout/activity_recommend.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -18,6 +18,16 @@
       android:background="@null"
       android:src="@drawable/back_chevron"
       android:id="@+id/ibtn_back"/>
+
+    <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="regular"
+      android:text="친구 추천"
+      android:textColor="#333333"
+      android:textSize="20sp"
+      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/tv_setting_title"/>
   </FrameLayout>
 
   <LinearLayout
