--- a/app/src/main/res/drawable/progress_bar.xml
+++ b/app/src/main/res/drawable/progress_bar.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rotate
-  android:duration="1"
+  android:fromDegrees="-90"
   android:pivotX="50%"
   android:pivotY="50%"
-  android:fromDegrees="0"
-  android:toDegrees="360"
+  android:toDegrees="270"
   xmlns:android="http://schemas.android.com/apk/res/android">
 
   <shape
     android:innerRadiusRatio="3"
     android:thicknessRatio="8"
-    android:useLevel="false"
-    android:thickness="3dp"
+    android:useLevel="true"
+    android:thickness="2dp"
     android:shape="ring">
-    <size
-      android:width="40dip"
-      android:height="40dip"/>
     <gradient
       android:type="sweep"
       android:useLevel="false"
-      android:centerY="0.5"
+      android:angle="0"
       android:endColor="#ff5146"
       android:startColor="#ff2470"/>
   </shape>
