--- a/app/src/main/res/layout/activity_advertisement_detail.xml
+++ b/app/src/main/res/layout/activity_advertisement_detail.xml
@@ -252,7 +252,9 @@
           android:id="@+id/pg_advertise"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          style="?android:attr/progressBarStyleLarge"
+          android:indeterminate="false"
+          style="?android:attr/progressBarStyleHorizontal"
+          android:background="@drawable/progress_background"
           android:progressDrawable="@drawable/progress_ad"/>
 
         <ImageView
