--- a/app/src/main/res/layout/fragment_advertisement_item.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item.xml
@@ -37,7 +37,7 @@
       android:background="@null"
       android:id="@+id/btn_advertiseWv"/>
 
-    <LinearLayout
+    <RelativeLayout
       android:orientation="horizontal"
       android:background="#CCFFFFFF"
       android:id="@+id/ll_advertise_text"
@@ -66,10 +66,13 @@
 
       <LinearLayout
         android:orientation="vertical"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="13dp"
         android:layout_gravity="center_vertical"
-        android:layout_width="240dp"
-        android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/iv_companyPicture"
+        android:layout_toEndOf="@+id/iv_companyPicture">
 
         <com.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="medium"
@@ -96,14 +99,17 @@
       </LinearLayout>
 
       <ImageView
-        android:layout_marginRight="8dp"
         android:layout_gravity="right"
         android:layout_width="22dp"
         android:layout_height="22dp"
         android:scaleType="centerCrop"
-        android:id="@+id/iv_advertiseNew"/>
+        android:id="@+id/iv_advertiseNew"
+        android:layout_marginRight="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
   </FrameLayout>
 
