--- a/app/src/main/res/layout/activity_store_challenge.xml
+++ b/app/src/main/res/layout/activity_store_challenge.xml
@@ -13,14 +13,10 @@
     android:layout_height="54dp">
 
     <ImageButton
-      android:paddingRight="17dp"
-      android:paddingLeft="8dp"
-      android:paddingTop="12.5dp"
-      android:paddingBottom="12.5dp"
-      android:layout_width="37dp"
+      android:layout_width="44dp"
       android:layout_height="match_parent"
       android:background="#00000000"
-      android:src="@drawable/back"
+      android:src="@drawable/back_white"
       android:id="@+id/btn_store_item_back"
       android:backgroundTint="#000000"/>
 
@@ -28,7 +24,7 @@
       android:text="푸지스토어"
       app:fontWeight="medium"
       android:gravity="center"
-      android:layout_marginRight="37dp"
+      android:layout_marginRight="44dp"
       android:textSize="20sp"
       android:textColor="@color/colorWhite"
       android:layout_width="match_parent"
