--- a/app/src/main/res/layout/activity_store_saving_detail.xml
+++ b/app/src/main/res/layout/activity_store_saving_detail.xml
@@ -1,7 +1,256 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+
+  <FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ScrollView
+      android:layout_marginBottom="55dp"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <!-- 상단바 -->
+        <LinearLayout
+          android:orientation="horizontal"
+          android:layout_width="match_parent"
+          android:background="@color/colorWhite"
+          android:layout_height="54dp">
+
+          <ImageButton
+            android:paddingRight="17dp"
+            android:paddingLeft="8dp"
+            android:paddingTop="12.5dp"
+            android:paddingBottom="12.5dp"
+            android:layout_width="37dp"
+            android:layout_height="match_parent"
+            android:background="#00000000"
+            android:src="@drawable/back"
+            android:id="@+id/btn_store_saving_back"
+            android:backgroundTint="#000000"/>
+
+          <com.puzi.puzi.ui.customview.NotoTextView
+            android:text="푸지적금"
+            app:fontWeight="medium"
+            android:gravity="center"
+            android:layout_marginEnd="37dp"
+            android:textSize="20sp"
+            android:textColor="#333333"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+          android:background="#dadada"
+          android:layout_width="match_parent"
+          android:layout_height="1dp"/>
+
+        <FrameLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+
+          <LinearLayout
+            android:orientation="vertical"
+            android:background="@color/colorWhite"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+              android:layout_gravity="center_horizontal"
+              android:layout_marginTop="16dp"
+              android:layout_width="155dp"
+              android:layout_height="155dp"
+              android:src="@mipmap/home"
+              android:id="@+id/iv_store_saving_preview"/>
+
+            <com.puzi.puzi.ui.customview.NotoTextView
+              app:fontWeight="medium"
+              android:text="아메리카노"
+              android:layout_gravity="center_horizontal"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:textSize="22sp"
+              android:textColor="#333333"
+              android:gravity="center_horizontal"
+              android:layout_marginTop="17dp"
+              android:layout_marginBottom="9dp"
+              android:id="@+id/tv_store_saving_name"/>
+
+          </LinearLayout>
+
+        </FrameLayout>
+
+        <LinearLayout
+          android:background="#fafafa"
+          android:layout_width="match_parent"
+          android:layout_height="10dp">
+        </LinearLayout>
+
+        <LinearLayout
+          android:orientation="horizontal"
+          android:background="@color/colorWhite"
+          android:layout_width="match_parent"
+          android:layout_height="49dp">
+
+          <com.puzi.puzi.ui.customview.NotoTextView
+            app:fontWeight="bold"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="24dp"
+            android:textSize="15sp"
+            android:textColor="#333333"
+            android:text="적금 조건"
+            android:layout_width="81dp"
+            android:layout_height="wrap_content"/>
+
+          <com.puzi.puzi.ui.customview.NotoTextView
+            app:fontWeight="regular"
+            android:id="@+id/tv_store_saving_point_count"
+            android:layout_gravity="center_vertical"
+            android:textSize="16sp"
+            android:textColor="#333333"
+            android:text=""
+            android:layout_marginLeft="10dp"
+            android:maxLines="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+          android:orientation="horizontal"
+          android:background="@color/colorWhite"
+          android:layout_width="match_parent"
+          android:layout_height="49dp">
+
+          <com.puzi.puzi.ui.customview.NotoTextView
+            app:fontWeight="bold"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="24dp"
+            android:textSize="15sp"
+            android:textColor="#333333"
+            android:text="하루 적금액"
+            android:layout_width="81dp"
+            android:layout_height="wrap_content"/>
+
+          <Spinner
+            android:padding="0dp"
+            android:gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/sp_store_saving_daily_point"
+            android:background="@drawable/button_store_withdraw_input"
+            android:layout_width="91dp"
+            android:layout_height="35dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+          android:background="#fafafa"
+          android:layout_width="match_parent"
+          android:layout_height="10dp">
+        </LinearLayout>
+
+        <LinearLayout
+          android:orientation="vertical"
+          android:background="@color/colorWhite"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+
+          <com.puzi.puzi.ui.customview.NotoTextView
+            app:fontWeight="regular"
+            android:text="- 적금금액은 매일 새벽 1시에 입금되며, 입금된 금액은 사용할 수 없습니다.\n- 해지시 적금금액은 사용 가능합니다."
+            android:textSize="13sp"
+            android:layout_marginTop="12dp"
+            android:layout_marginLeft="17dp"
+            android:layout_marginRight="17dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+          <LinearLayout
+            android:layout_marginTop="9dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.puzi.puzi.ui.customview.NotoTextView
+              app:fontWeight="medium"
+              android:text="상품설명"
+              android:layout_width="52dp"
+              android:layout_height="wrap_content"
+              android:layout_marginRight="13dp"
+              android:textSize="14sp"
+              android:textColor="#6d6d6d"/>
+
+            <com.puzi.puzi.ui.customview.NotoTextView
+              app:fontWeight="demilight"
+              android:text="text"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:textSize="12sp"
+              android:textColor="#6d6d6d"
+              android:id="@+id/tv_store_savning_comment"
+              android:layout_weight="1"/>
+
+          </LinearLayout>
+
+          <LinearLayout
+            android:layout_marginTop="14dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="23dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.puzi.puzi.ui.customview.NotoTextView
+              app:fontWeight="medium"
+              android:text="유효기간"
+              android:layout_width="52dp"
+              android:layout_height="wrap_content"
+              android:layout_marginRight="13dp"
+              android:textSize="14sp"
+              android:textColor="#6d6d6d"/>
+
+            <com.puzi.puzi.ui.customview.NotoTextView
+              app:fontWeight="demilight"
+              android:text="TextView"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:textSize="12sp"
+              android:textColor="#6d6d6d"
+              android:id="@+id/tv_store_saving_expiryDay"
+              android:layout_weight="1"/>
+
+          </LinearLayout>
+
+        </LinearLayout>
+
+      </LinearLayout>
+
+    </ScrollView>
+
+    <com.puzi.puzi.ui.customview.NotoButton
+      app:fontWeight="bold"
+      android:layout_gravity="bottom"
+      android:background="#7b0f8b"
+      android:text="적금 가입하기"
+      android:layout_width="match_parent"
+      android:layout_height="55dp"
+      android:textSize="16sp"
+      android:textColor="#ffffff"
+      android:id="@+id/btn_store_saving"/>
+
+  </FrameLayout>
 
 </LinearLayout>
