--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,51 @@
 
     </FrameLayout>
 
+    <FrameLayout
+      android:visibility="gone"
+      android:id="@+id/fl_main_saving"
+      android:layout_gravity="center_vertical"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent">
+
+      <LinearLayout
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/bg_main_saving"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp">
+
+        <ImageView
+          android:src="@drawable/puzi_saving_title_icon"
+          android:layout_marginLeft="11dp"
+          android:layout_marginRight="7dp"
+          android:layout_gravity="center_vertical"
+          android:layout_width="19dp"
+          android:layout_height="18dp"/>
+
+        <com.puzi.puzi.ui.customview.RobotoTextView
+          android:id="@+id/tv_main_saving"
+          android:layout_gravity="center_vertical"
+          android:textSize="12sp"
+          android:layout_marginRight="10dp"
+          android:textColor="@color/colorWhite"
+          android:text="100P"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
+
+      </LinearLayout>
+
+      <Button
+        android:id="@+id/btn_main_saving"
+        android:background="#00000000"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    </FrameLayout>
+
+
     <LinearLayout
+      android:orientation="horizontal"
       android:layout_weight="1"
       android:gravity="left"
       android:layout_width="0dp"
