푸지 적금 완료

--- a/app/src/main/res/layout/activity_store_saving_detail_mine.xml
+++ b/app/src/main/res/layout/activity_store_saving_detail_mine.xml
@@ -311,7 +311,7 @@
       <com.puzi.puzi.ui.customview.NotoButton
         app:fontWeight="regular"
         android:id="@+id/btn_profile_channel_dropdown_block"
-        android:text="차단하기"
+        android:text="해지하기"
         android:textColor="#333333"
         android:background="@drawable/ripple_basic"
         android:layout_width="match_parent"
