--- a/app/src/main/res/layout/activity_store_challenge_detail.xml
+++ b/app/src/main/res/layout/activity_store_challenge_detail.xml
@@ -38,10 +38,10 @@
             android:backgroundTint="#000000"/>
 
           <com.puzi.puzi.ui.customview.NotoTextView
-            android:text="푸지응모"
             app:fontWeight="medium"
+            android:text="푸지응모"
             android:gravity="center"
-            android:layout_marginEnd="37dp"
+            android:layout_marginRight="37dp"
             android:textSize="20sp"
             android:textColor="#333333"
             android:layout_width="match_parent"
