--- a/app/src/main/res/layout/item_store_challenge_item.xml
+++ b/app/src/main/res/layout/item_store_challenge_item.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/button_store_item"
     android:layout_margin="8dp"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
       android:orientation="horizontal"
@@ -63,7 +63,7 @@
       android:layout_marginBottom="4dp"
       android:scaleType="fitCenter"
       android:layout_width="match_parent"
-      android:layout_height="84dp"
+      android:layout_height="154dp"
       android:src="@mipmap/home"
       android:id="@+id/iv_store_challenge_item"/>
 
