--- a/app/src/main/res/layout/fragment_level.xml
+++ b/app/src/main/res/layout/fragment_level.xml
@@ -9,17 +9,40 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-      android:id="@+id/iv_level"
-      android:src="@drawable/grade_img"
-      android:layout_marginTop="23dp"
-      android:layout_marginBottom="30dp"
-      android:layout_marginLeft="44dp"
-      android:layout_marginRight="44dp"
-      android:layout_gravity="center"
-      android:scrollbars="none"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"/>
+    <LinearLayout
+      android:orientation="vertical"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+      <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+          android:layout_weight="1"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"/>
+
+        <ImageView
+          android:id="@+id/iv_level"
+          android:scaleType="fitXY"
+          android:src="@drawable/grade_img"
+          android:layout_marginTop="23dp"
+          android:layout_marginBottom="30dp"
+          android:layout_gravity="center"
+          android:scrollbars="none"
+          android:layout_width="199dp"
+          android:layout_height="387dp"/>
+
+        <LinearLayout
+          android:layout_weight="1"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"/>
+
+      </LinearLayout>
+
+    </LinearLayout>
 
   </ScrollView>
 
