--- a/app/src/main/res/layout/item_store_saving_item.xml
+++ b/app/src/main/res/layout/item_store_saving_item.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/button_store_item"
     android:layout_margin="8dp"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
       android:orientation="horizontal"
@@ -39,7 +39,7 @@
 
     <FrameLayout
       android:layout_width="match_parent"
-      android:layout_height="100dp">
+      android:layout_height="170dp">
 
       <ImageView
         android:layout_gravity="center"
@@ -49,7 +49,7 @@
         android:layout_marginBottom="4dp"
         android:scaleType="fitCenter"
         android:layout_width="match_parent"
-        android:layout_height="84dp"
+        android:layout_height="154dp"
         android:src="@mipmap/home"
         android:id="@+id/iv_store_saving_item"/>
 
@@ -57,12 +57,13 @@
         app:fontWeight="bold"
         android:id="@+id/iv_store_saving_discount"
         android:layout_gravity="right|bottom"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="24dp"
         android:background="@drawable/bg_store_saving_discount"
         android:gravity="center"
         android:text="10%"
         android:textColor="@color/colorWhite"
         android:textSize="21sp"
+        android:layout_marginBottom="20dp"
         android:layout_width="48dp"
         android:layout_height="48dp"/>
 
